[package]
name = "async-oauth2"
version = "0.4.0"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Florin Lipan <florinlipan@gmail.com>",
  "David A. Ramos <ramos@cs.stanford.edu>",
  "John-John Tedro <udoprog@tedro.se>"
]
edition = "2021"
description = "An asynchronous OAuth2 flow implementation."
documentation = "https://docs.rs/async-oauth2"
readme = "README.md"
homepage = "https://github.com/udoprog/async-oauth2"
repository = "https://github.com/udoprog/async-oauth2"
license = "MIT/Apache-2.0"
keywords = ["auth", "oauth2"]
categories = ["authentication", "web-programming"]

[lib]
name = "oauth2"
path = "src/lib.rs"

[dependencies]
base64 = "0.13.0"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde-aux = "3.0.1"
sha2 = "0.10.2"
url = "2.2.2"
reqwest = "0.11.10"
thiserror = "1.0.30"
http = "0.2.6"
bytes = "1.1.0"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }

[workspace]
members = ["examples"]
