[package]
name = "async-oauth2"
version = "0.4.1"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Florin Lipan <florinlipan@gmail.com>",
  "David A. Ramos <ramos@cs.stanford.edu>",
  "John-John Tedro <udoprog@tedro.se>"
]
edition = "2021"
rust-version = "1.60"
description = "An asynchronous OAuth2 flow implementation."
documentation = "https://docs.rs/async-oauth2"
readme = "README.md"
homepage = "https://github.com/udoprog/async-oauth2"
repository = "https://github.com/udoprog/async-oauth2"
license = "MIT/Apache-2.0"
keywords = ["auth", "oauth2"]
categories = ["authentication", "web-programming"]

[lib]
name = "oauth2"
path = "src/lib.rs"

[dependencies]
base64 = "0.21.0"
rand = "0.8.5"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
serde-aux = "4.1.2"
sha2 = "0.10.6"
url = "2.3.1"
reqwest = "0.11.14"
thiserror = "1.0.39"
http = "0.2.9"
bytes = "1.4.0"

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }

[workspace]
members = ["examples"]
