[package]
name = "async-oauth2"
version = "0.5.0"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Florin Lipan <florinlipan@gmail.com>",
  "David A. Ramos <ramos@cs.stanford.edu>",
  "John-John Tedro <udoprog@tedro.se>"
]
edition = "2021"
rust-version = "1.81"
description = "An asynchronous OAuth2 flow implementation."
documentation = "https://docs.rs/async-oauth2"
readme = "README.md"
homepage = "https://github.com/udoprog/async-oauth2"
repository = "https://github.com/udoprog/async-oauth2"
license = "MIT OR Apache-2.0"
keywords = ["auth", "oauth2"]
categories = ["authentication", "web-programming"]

[lib]
name = "oauth2"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde-aux = "4.5.0"
sha2 = "0.10.6"
url = "2.5.0"
reqwest = "0.12.0"
thiserror = "1.0.39"
http = "1.1.0"
bytes = "1.6.0"

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }

[workspace]
members = ["examples"]
