[package]
name = "async-oauth2-examples"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
publish = false

[lib]
name = "oauth2_examples"

[dependencies]
reqwest = "0.12.0"
tokio = { version = "1.17.0", features = ["full"] }
hyper = { version = "0.14.18", features = ["server", "http1", "tcp"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_urlencoded = "0.7.1"
tower-service = "0.3.2"
log = "0.4.21"
anyhow = "1.0.81"
clap = "4.5.4"
async-oauth2 = {path = ".."}
