[package]
name = "async-oauth2-examples"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
publish = false

[lib]
name = "oauth2_examples"

[dependencies]
async-oauth2 = { path = ".." }

reqwest = "0.13.3"
tokio = { version = "1.17.0", features = ["full"] }
axum = { version = "0.8.9", features = ["form", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.21"
anyhow = "1.0.81"
clap = "4.5.4"
